<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/toolbarlayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_layout" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/youtube_thumb_upper_png"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/toolbarlayouts">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="24dp"
                android:background="@drawable/bg_btn_ancent1"
                android:drawableLeft="@drawable/white_rounded_cross_png"
                android:drawablePadding="@dimen/dp_5"
                android:gravity="center"
                android:minHeight="0dp"
                android:padding="@dimen/dp_3"
                android:paddingStart="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_24"
                android:background="@drawable/bg_btn_disabled"
                android:drawableLeft="@drawable/white_rounded_correct_png"
                android:drawablePadding="@dimen/dp_5"
                android:enabled="false"
                android:gravity="center"
                android:minHeight="0dp"
                android:padding="@dimen/dp_3"
                android:paddingStart="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/disabledtextcolor"
                android:textStyle="bold"
                android:visibility="visible" />


        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/youtube_thumb_upper_png"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/youtube_thumb_lower_png"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView10" />

                <ImageView
                    android:id="@+id/sharerule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_rule_image"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView24"
                    app:layout_constraintEnd_toEndOf="@+id/imageView24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView24" />


                <LinearLayout
                    android:id="@+id/linearLayout15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#f2f2f2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView24">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp_20"
                        android:text="@string/findyourvideo"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout15">


                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_40"
                        android:layout_weight=".5"
                        android:src="@drawable/square_youtube_png" />

                    <Button
                        android:id="@+id/btn_open_youtube"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_30"
                        android:layout_marginEnd="@dimen/dp_19"
                        android:layout_weight="1.4"
                        android:background="@drawable/bg_btn_accent"
                        android:text="@string/openyoutube"
                        android:textAllCaps="false"
                        android:textColor="@color/newwhite"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="#f2f2f2"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout16"
                    app:layout_constraintVertical_bias="0.0">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilOption1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_30"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="@dimen/dp_30"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="Video Title"
                        android:textColorHint="@color/newblack"
                        app:layout_constraintEnd_toEndOf="@+id/tieQuestionTitle"
                        app:layout_constraintStart_toStartOf="@+id/tieQuestionTitle"
                        app:layout_constraintTop_toBottomOf="@+id/tieQuestionTitle"
                        tools:layout_editor_absoluteY="150dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:text=""
                            android:textColor="@color/newblack"
                            android:textSize="@dimen/text_medium"
                            android:textStyle="bold" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilOption2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_30"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="@dimen/dp_30"
                        android:layout_marginBottom="@dimen/dp_30"
                        android:backgroundTint="@color/edittextbgcolor2"
                        android:hint="Paste Your Video Url"
                        android:textColorHint="@color/newblack"
                        app:layout_constraintEnd_toEndOf="@+id/tieQuestionTitle"
                        app:layout_constraintStart_toStartOf="@+id/tieQuestionTitle"
                        app:layout_constraintTop_toBottomOf="@+id/tieQuestionTitle"
                        tools:layout_editor_absoluteY="150dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/videourl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp_90"
                            android:backgroundTint="@color/paleLime"
                            android:textColor="@color/newblack"
                            android:textSize="@dimen/text_medium"
                            android:textStyle="bold" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>