<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_36"
        android:background="@drawable/bg_list_background_top_rounded_primary">


        <TextView
            android:id="@+id/tv_filter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:paddingStart="@dimen/dp_20"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:text="Filter Questions"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/bg_btn_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_filter_title">

            <TextView
                android:id="@+id/tv_title_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_1"
                android:background="@drawable/bg_btn_white"
                android:backgroundTint="@color/colorPrimary"
                android:padding="@dimen/dp_8"
                android:text="Select Subject"
                android:textColor="@color/white"
                android:textSize="@dimen/text_primary"
                android:textStyle="bold"
                android:visibility="gone" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_top_title">

            <RelativeLayout
                android:id="@+id/rl_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/select_subject_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/title_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="@dimen/dp_8"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0.7"
                        android:padding="10dp"
                        android:text="Select Subjects"
                        android:textSize="@dimen/text_small" />

                    <LinearLayout
                        android:id="@+id/llSubjectAll"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_weight="0.3"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/dp_16"
                        android:visibility="gone">

                        <CheckBox
                            android:id="@+id/item_all_subject"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:textSize="13sp" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:text="Select All"
                            android:textColor="@color/newblack"
                            android:textSize="@dimen/sp_12"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/view9"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_3"
                    android:layout_below="@+id/select_subject_layout"
                    android:layout_marginStart="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:background="@color/horizontalview1"
                    android:visibility="visible" />

            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selection_items_recview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_300"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/dp_16"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_title"
                tools:listitem="@layout/item_multiselection_recview" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selection_items_recview">

                <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_size"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_accent"
                    android:padding="9dp"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="@color/newwhite"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btnClear"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_size"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_accent"
                    android:padding="9dp"
                    android:text="@string/clear"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/newwhite"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnDone"
                    app:layout_constraintStart_toEndOf="@+id/btnCancel"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btnDone"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_size"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_accent"
                    android:padding="9dp"
                    android:text="@string/done"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/newwhite"
                    android:textSize="@dimen/dp_14"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>